--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^5.1.0",
+    "firebase-admin": "^13.3.0",
     "redis": "^5.0.1"
   },
   "devDependencies": {
